[bugfix] Toast: line wrap in iOS (#2142)

--- a/packages/style/var.less
+++ b/packages/style/var.less
@@ -75,3 +75,19 @@
 // Tab
 @tabs-line-height: 44px;
 @tabs-card-height: 30px;
+
+// Toast
+@toast-max-width: 70%;
+@toast-font-size: 14px;
+@toast-text-color: @white;
+@toast-line-height: 20px;
+@toast-border-radius: 4px;
+@toast-background-color: rgba(0, 0, 0, .7);
+@toast-icon-size: 50px;
+@toast-text-min-width: 96px;
+@toast-text-padding: 8px 12px;
+@toast-default-padding: 15px;
+@toast-default-width: 90px;
+@toast-default-min-height: 90px;
+@toast-position-top-distance: 50px;
+@toast-position-bottom-distance: 50px;
